--- a/template_entrainement_CNN.ipynb
+++ b/template_entrainement_CNN.ipynb
@@ -51,6 +51,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "DATA_DIR = \".\\Industrial Optical Inspection (reduced datasets)\\Dataset texture\""
+      ],
+      "metadata": {
+        "id": "cCZAqjda_XcR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "RGR8OCG6-gKc"
@@ -193,8 +204,7 @@
       },
       "outputs": [],
       "source": [
-        "OUT_DIR = \".\\Industrial Optical Inspection (reduced datasets)\\Dataset texture\"\n",
-        "train_dataset, val_dataset, test_dataset = creer_datasets(OUT_DIR, train_size=0.9, data_augmentation=True)\n",
+        "train_dataset, val_dataset, test_dataset = creer_datasets(DATA_DIR, train_size=0.9, data_augmentation=True)\n",
         "train_loader, val_loader, test_loader = creer_dataloader(train_dataset, val_dataset, test_dataset, batch_size=64)"
       ]
     },
