--- a/template_entrainement_CNN.ipynb
+++ b/template_entrainement_CNN.ipynb
@@ -64,11 +64,11 @@
         "drive.mount('/content/gdrive')"
       ],
       "metadata": {
-        "id": "-cxb5kjl_1cR",
-        "outputId": "33b93191-90fe-4c54-f4a3-f5133303b7fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-cxb5kjl_1cR",
+        "outputId": "33b93191-90fe-4c54-f4a3-f5133303b7fc"
       },
       "execution_count": 3,
       "outputs": [
@@ -437,8 +437,8 @@
       "outputs": [],
       "source": [
         "auc = str(round(caculate_auc(predictions, labels), 3))\n",
-        "model = f\"efficientnet_b{efficient_net_nb}\"\n",
-        "SAVE_DIR = f\"/content/gdrive/MyDrive/Colab Notebooks/Saved models/inspection visuelle/classes_model_auc_{auc}.pt\"\n",
+        "model_architecture = f\"efficientnet_b{efficient_net_nb}\"\n",
+        "SAVE_DIR = f\"/content/gdrive/MyDrive/Colab Notebooks/Saved models/inspection visuelle/classes_{model_architecture}_auc_{auc}.pt\"\n",
         "torch.save(model.state_dict(),SAVE_DIR)"
       ]
     }
