ajout gestion memoire

--- a/template_entrainement_CNN.ipynb
+++ b/template_entrainement_CNN.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6txQeKaO-gKW",
-        "outputId": "508aabfe-c397-420c-d36a-97c8c67f7933"
+        "outputId": "2685cd84-f1bf-463c-b363-64376d892a96"
       },
       "outputs": [
         {
@@ -41,7 +41,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8j4O5N6V-gKb",
-        "outputId": "bc85a270-db00-4125-d4e4-59ddcc831b40"
+        "outputId": "64abff89-2839-4e95-a696-65fefe4022c0"
       },
       "outputs": [
         {
@@ -68,7 +68,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-cxb5kjl_1cR",
-        "outputId": "33b93191-90fe-4c54-f4a3-f5133303b7fc"
+        "outputId": "eed843b9-5ddd-425a-95bb-d0fc4b8aa06d"
       },
       "execution_count": 3,
       "outputs": [
@@ -87,23 +87,10 @@
         "DATA_DIR = r\"/content/gdrive/MyDrive/Industrial Optical Inspection (datasets)/Industrial Optical Inspection (datasets)/Dataset texture\""
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cCZAqjda_XcR",
-        "outputId": "b31d1700-bd1e-41f7-f5b0-a93cdb9e0b17"
+        "id": "cCZAqjda_XcR"
       },
-      "execution_count": 73,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/gdrive/MyDrive\n",
-            "/content/gdrive/MyDrive\n"
-          ]
-        }
-      ]
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -119,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 5,
       "metadata": {
         "id": "UXMvWzgp-gKe"
       },
@@ -152,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 6,
       "metadata": {
         "id": "JSj2YCOu-gKg"
       },
@@ -211,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 8,
       "metadata": {
         "id": "zMapcHH8-gKk"
       },
@@ -242,14 +229,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 9,
       "metadata": {
         "id": "H5pHmV_H-gKl"
       },
       "outputs": [],
       "source": [
         "train_dataset, val_dataset, test_dataset = creer_datasets(DATA_DIR, train_size=0.9, data_augmentation=True)\n",
-        "train_loader, val_loader, test_loader = creer_dataloader(train_dataset, val_dataset, test_dataset, batch_size=64)"
+        "train_loader, val_loader, test_loader = creer_dataloader(train_dataset, val_dataset, test_dataset, batch_size=128)"
       ]
     },
     {
@@ -263,27 +250,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 66,
           "referenced_widgets": [
-            "54cf4a168d634f2c983549ff07382570",
-            "c4524dee1503487690b0c84ab8c5a05d",
-            "c9ff56e5050a4f7a914d5ac0e55d2b89",
-            "4516603cfccd481c8d1f31e9fc491272",
-            "1cd4904047a540eb988beaf54ea1a1d4",
-            "914e62ca232b4df3a4ace8458a7d30c0",
-            "3cd096e8da00427a93ccbb200e3f0043",
-            "906dba116dd84ca39f6365fd0d837070",
-            "09c1e2ecd1ef4caea9e3bc3cc3d80187",
-            "1b04bf8dd85047d3ac7682ca71c0198c",
-            "ec091605d5164df6a741043839437974"
+            "d9235787a73c4e20b8df8ff6976c41d5",
+            "d067331a7b9f42c39b209e9169a94ce4",
+            "2c164d8008914761b25ce64ac43939e7",
+            "f193775c6b474e0a8fc0cb1e750c9e18",
+            "77d0eafc7b21469e8bec33bfca714655",
+            "efc2b434cdf549fa84fff72fb3103e0f",
+            "2028971035c74cedb10f7c71e9550e2d",
+            "7b4d8eec5d874603b98d6fa2f9bff570",
+            "e958cce2762c470d8c205120f67fe540",
+            "9523f9ca348e493a80df3485ad7e3fad",
+            "8d74e11bd90d45d281d91fb28e5e6b7f"
           ]
         },
         "id": "UXzLJUHI-gKm",
-        "outputId": "b22c4803-61b6-4b5c-e084-9bef9585497a"
+        "outputId": "b365bb15-4c8c-4043-acd3-c3a709065adb"
       },
       "outputs": [
         {
@@ -302,7 +289,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "54cf4a168d634f2c983549ff07382570"
+              "model_id": "d9235787a73c4e20b8df8ff6976c41d5"
             }
           },
           "metadata": {}
@@ -356,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 11,
       "metadata": {
         "id": "NsuF-vmi-gKo"
       },
@@ -370,6 +357,12 @@
         "def one_hot(a: np.array, num_classes: int) -> np.array:\n",
         "    \n",
         "  return np.squeeze(np.eye(num_classes)[a.reshape(-1)]).astype(int)\n",
+        "\n",
+        "def memory_usage(device: torch.device) -> float:\n",
+        "    if device == torch.device(\"cuda\"):\n",
+        "        memoire_disponible = round(torch.cuda.max_memory_reserved()*1e-9,3)\n",
+        "        memoire_utilisee = round(torch.cuda.max_memory_allocated()*1e-9,3)\n",
+        "        return memoire_utilisee, memoire_disponible\n",
         "  \n",
         "def train_model(model: nn.Module, train_loader: DataLoader, epochs: int = 10, lr: float = 0.001, weight_decay: float = 0.0001, device: torch.device = DEVICE):\n",
         "    \n",
@@ -382,7 +375,7 @@
         "        batch_loss = []\n",
         "        batch_outputs = []\n",
         "        batch_labels = []\n",
-        "        for images, labels in train_loader:\n",
+        "        for i, (images, labels) in enumerate(train_loader):\n",
         "            images = images.to(device)\n",
         "            labels = labels.to(device)\n",
         "            optimizer.zero_grad()\n",
@@ -393,6 +386,9 @@
         "            batch_loss.append(loss.item())\n",
         "            batch_outputs.append(outputs.detach().cpu().numpy())\n",
         "            batch_labels.append(labels.detach().cpu().numpy())\n",
+        "            if i == 10:\n",
+        "              memoire_utilisee, memoire_disponible = memory_usage(device)\n",
+        "              print(f\"L'entraînement utilise environ {memoire_utilisee}GiB sur {memoire_disponible}GiB de mémoire. Soit, {memoire_utilisee*100/memoire_disponible}%\")\n",
         "        scheduler.step(metrics=loss.item())\n",
         "        print(f\"\"\"Epoch: {epoch} ==> Loss moyenne: {sum(batch_loss)/len(batch_loss):.3f}\n",
         "              | Training AUC: {caculate_auc(np.concatenate(batch_outputs, axis=0), np.concatenate(batch_labels, axis=0)):.3f}\"\"\")\n",
@@ -420,11 +416,23 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "rQ-zFNy9-gKo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rQ-zFNy9-gKo",
+        "outputId": "1629269e-5f25-439d-ba47-e76b9dd0ebaa"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "L'entraînement utilise environ 11.441 sur 12.547 de la mémoire disponible. Soit, 91.18514385908983%\n"
+          ]
+        }
+      ],
       "source": [
-        "model = train_model(model, train_loader, epochs=10)\n",
+        "model = train_model(model, train_loader, epochs=5)\n",
         "predictions, labels = eval_model(model, test_loader)"
       ]
     },
@@ -475,7 +483,7 @@
     "gpuClass": "standard",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "54cf4a168d634f2c983549ff07382570": {
+        "d9235787a73c4e20b8df8ff6976c41d5": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -490,14 +498,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_c4524dee1503487690b0c84ab8c5a05d",
-              "IPY_MODEL_c9ff56e5050a4f7a914d5ac0e55d2b89",
-              "IPY_MODEL_4516603cfccd481c8d1f31e9fc491272"
+              "IPY_MODEL_d067331a7b9f42c39b209e9169a94ce4",
+              "IPY_MODEL_2c164d8008914761b25ce64ac43939e7",
+              "IPY_MODEL_f193775c6b474e0a8fc0cb1e750c9e18"
             ],
-            "layout": "IPY_MODEL_1cd4904047a540eb988beaf54ea1a1d4"
+            "layout": "IPY_MODEL_77d0eafc7b21469e8bec33bfca714655"
           }
         },
-        "c4524dee1503487690b0c84ab8c5a05d": {
+        "d067331a7b9f42c39b209e9169a94ce4": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -512,13 +520,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_914e62ca232b4df3a4ace8458a7d30c0",
+            "layout": "IPY_MODEL_efc2b434cdf549fa84fff72fb3103e0f",
             "placeholder": "​",
-            "style": "IPY_MODEL_3cd096e8da00427a93ccbb200e3f0043",
+            "style": "IPY_MODEL_2028971035c74cedb10f7c71e9550e2d",
             "value": "100%"
           }
         },
-        "c9ff56e5050a4f7a914d5ac0e55d2b89": {
+        "2c164d8008914761b25ce64ac43939e7": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -534,15 +542,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_906dba116dd84ca39f6365fd0d837070",
+            "layout": "IPY_MODEL_7b4d8eec5d874603b98d6fa2f9bff570",
             "max": 21444401,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_09c1e2ecd1ef4caea9e3bc3cc3d80187",
+            "style": "IPY_MODEL_e958cce2762c470d8c205120f67fe540",
             "value": 21444401
           }
         },
-        "4516603cfccd481c8d1f31e9fc491272": {
+        "f193775c6b474e0a8fc0cb1e750c9e18": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -557,13 +565,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_1b04bf8dd85047d3ac7682ca71c0198c",
+            "layout": "IPY_MODEL_9523f9ca348e493a80df3485ad7e3fad",
             "placeholder": "​",
-            "style": "IPY_MODEL_ec091605d5164df6a741043839437974",
-            "value": " 20.5M/20.5M [00:00&lt;00:00, 50.9MB/s]"
+            "style": "IPY_MODEL_8d74e11bd90d45d281d91fb28e5e6b7f",
+            "value": " 20.5M/20.5M [00:01&lt;00:00, 16.5MB/s]"
           }
         },
-        "1cd4904047a540eb988beaf54ea1a1d4": {
+        "77d0eafc7b21469e8bec33bfca714655": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -615,7 +623,7 @@
             "width": null
           }
         },
-        "914e62ca232b4df3a4ace8458a7d30c0": {
+        "efc2b434cdf549fa84fff72fb3103e0f": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -667,7 +675,7 @@
             "width": null
           }
         },
-        "3cd096e8da00427a93ccbb200e3f0043": {
+        "2028971035c74cedb10f7c71e9550e2d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -682,7 +690,7 @@
             "description_width": ""
           }
         },
-        "906dba116dd84ca39f6365fd0d837070": {
+        "7b4d8eec5d874603b98d6fa2f9bff570": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -734,7 +742,7 @@
             "width": null
           }
         },
-        "09c1e2ecd1ef4caea9e3bc3cc3d80187": {
+        "e958cce2762c470d8c205120f67fe540": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -750,7 +758,7 @@
             "description_width": ""
           }
         },
-        "1b04bf8dd85047d3ac7682ca71c0198c": {
+        "9523f9ca348e493a80df3485ad7e3fad": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -802,7 +810,7 @@
             "width": null
           }
         },
-        "ec091605d5164df6a741043839437974": {
+        "8d74e11bd90d45d281d91fb28e5e6b7f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
