--- a/template_entrainement_CNN.ipynb
+++ b/template_entrainement_CNN.ipynb
@@ -388,7 +388,7 @@
         "            batch_labels.append(labels.detach().cpu().numpy())\n",
         "            if i == 10:\n",
         "              memoire_utilisee, memoire_disponible = memory_usage(device)\n",
-        "              print(f\"L'entraînement utilise environ {memoire_utilisee}GiB sur {memoire_disponible}GiB de mémoire. Soit, {memoire_utilisee*100/memoire_disponible}%\")\n",
+        "              print(f\"L'entraînement utilise environ {memoire_utilisee}GiB sur {memoire_disponible}GiB de mémoire. Soit, {memoire_utilisee*100/memoire_disponible:.2f}%\")\n",
         "        scheduler.step(metrics=loss.item())\n",
         "        print(f\"\"\"Epoch: {epoch} ==> Loss moyenne: {sum(batch_loss)/len(batch_loss):.3f}\n",
         "              | Training AUC: {caculate_auc(np.concatenate(batch_outputs, axis=0), np.concatenate(batch_labels, axis=0)):.3f}\"\"\")\n",
@@ -414,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -427,7 +427,22 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "L'entraînement utilise environ 11.441 sur 12.547 de la mémoire disponible. Soit, 91.18514385908983%\n"
+            "L'entraînement utilise environ 11.441 sur 12.547 de la mémoire disponible. Soit, 91.18514385908983%\n",
+            "Epoch: 0 ==> Loss moyenne: 1.526\n",
+            "              | Training AUC: 0.994\n",
+            "L'entraînement utilise environ 11.441 sur 12.547 de la mémoire disponible. Soit, 91.18514385908983%\n",
+            "Epoch: 1 ==> Loss moyenne: 1.484\n",
+            "              | Training AUC: 0.996\n",
+            "L'entraînement utilise environ 11.441 sur 12.547 de la mémoire disponible. Soit, 91.18514385908983%\n",
+            "Epoch: 2 ==> Loss moyenne: 1.479\n",
+            "              | Training AUC: 0.996\n",
+            "L'entraînement utilise environ 11.441 sur 12.547 de la mémoire disponible. Soit, 91.18514385908983%\n",
+            "Epoch: 3 ==> Loss moyenne: 1.482\n",
+            "              | Training AUC: 0.996\n",
+            "L'entraînement utilise environ 11.441 sur 12.549 de la mémoire disponible. Soit, 91.17061120408002%\n",
+            "Epoch: 4 ==> Loss moyenne: 1.470\n",
+            "              | Training AUC: 0.999\n",
+            "AUC: 0.991\n"
           ]
         }
       ],
@@ -438,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "lKFEMbr--gKp"
       },
@@ -447,7 +462,9 @@
         "auc = str(round(caculate_auc(predictions, labels), 3))\n",
         "model_architecture = f\"efficientnet_b{efficient_net_nb}\"\n",
         "SAVE_DIR = f\"/content/gdrive/MyDrive/Colab Notebooks/Saved models/inspection visuelle/classes_{model_architecture}_auc_{auc}.pt\"\n",
-        "torch.save(model.state_dict(),SAVE_DIR)"
+        "os.makedirs(SAVE_DIR, exist_ok=True)\n",
+        "saving_name = \"texture_{model_architecture}_auc_{auc}.pt\"\n",
+        "torch.save(model.state_dict(),os.path.join(SAVE_DIR, saving_name))"
       ]
     }
   ],
