ajout accuracy à eval_model

--- a/template_entrainement_CNN.ipynb
+++ b/template_entrainement_CNN.ipynb
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 25,
       "metadata": {
         "id": "NsuF-vmi-gKo"
       },
@@ -397,18 +397,22 @@
         "def eval_model(model: nn.Module, loader: DataLoader, device: torch.device = DEVICE):\n",
         "    \n",
         "    model.eval()\n",
+        "    logits = []\n",
         "    predictions = []\n",
         "    labels = []\n",
         "    with torch.no_grad():\n",
         "        for images, labels_ in loader:\n",
         "            images = images.to(device)\n",
         "            labels_ = labels_.to(device)\n",
-        "            outputs = model(images)\n",
-        "            predictions.append(outputs.detach().cpu().numpy())\n",
+        "            outputs = model(images) \n",
+        "            logits.append(outputs.detach().cpu().numpy())          \n",
+        "            predictions.append(torch.max(outputs,1)[1].detach().cpu().numpy())\n",
         "            labels.append(labels_.detach().cpu().numpy())\n",
+        "    logits = np.concatenate(logits, axis=0)\n",
         "    predictions = np.concatenate(predictions, axis=0)\n",
         "    labels = np.concatenate(labels, axis=0)\n",
-        "    print(f\"AUC: {caculate_auc(predictions, labels):.3f}\")\n",
+        "    print(f\"AUC: {caculate_auc(logits, labels):.3f}\")\n",
+        "    print(f\"Accuracy: {(predictions == labels).sum().item() / labels.shape[0]:.2f}\")\n",
         "    return predictions, labels\n"
       ]
     },
@@ -465,6 +469,30 @@
         "os.makedirs(SAVE_DIR, exist_ok=True)\n",
         "saving_name = \"texture_{model_architecture}_auc_{auc}.pt\"\n",
         "torch.save(model.state_dict(),os.path.join(SAVE_DIR, saving_name))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions, labels = eval_model(model, test_loader)"
+      ],
+      "metadata": {
+        "id": "WT_I15GsOwjg",
+        "outputId": "cfc098d0-5fe0-4875-f614-44ce246fffa1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "AUC: 0.991\n",
+            "Accuracy: 0.95\n"
+          ]
+        }
       ]
     }
   ],
